<?xml version="1.0"?>
<package format="2">
  <name>jackal_interface</name>
  <version>0.0.0</version>
  <description>The jackal_interface package</description>

  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>jackal_control</build_depend>
  <build_depend>jackal_description</build_depend>
  <build_depend>jackal_gazebo</build_depend>
  <build_depend>jackal_msgs</build_depend>
  <build_depend>jackal_simulator</build_depend>
  <build_depend>jackal_viz</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>autoware_msgs</build_export_depend>
  <build_export_depend>jackal_control</build_export_depend>
  <build_export_depend>jackal_description</build_export_depend>
  <build_export_depend>jackal_gazebo</build_export_depend>
  <build_export_depend>jackal_msgs</build_export_depend>
  <build_export_depend>jackal_simulator</build_export_depend>
  <build_export_depend>jackal_viz</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>jackal_control</exec_depend>
  <exec_depend>jackal_description</exec_depend>
  <exec_depend>jackal_gazebo</exec_depend>
  <exec_depend>jackal_msgs</exec_depend>
  <exec_depend>jackal_simulator</exec_depend>
  <exec_depend>jackal_viz</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>velodyne_simulator</exec_depend>
  <exec_depend>gazebo_camera_description</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
